# ProjectiveDeblurring

./: README.md
experiment/opencv_warp/: ProjectiveMotionRL_main.cpp  README.md
experiment/opencv_warp/include/: ProjectiveMotionRL.h  svdcmp.h
experiment/opencv_warp/src/: ImResize.cpp  bitmap.cpp  homography.cpp
experiment/refactored_code_rgb/: ProjectiveMotionRL_main.cpp  README.md
experiment/refactored_code_rgb/include/: BicubicInterpolation.h  ImResize.h  ProjectiveMotionRL.h  bitmap.h  homography.h  warping.h
experiment/refactored_code_rgb/src/: BicubicInterpolation.cpp  ImResize.cpp  ProjectiveMotionRL.cpp  bitmap.cpp  warping.cpp
initial_code/: BicubicInterpolation.h  CMakeLists.txt  ImResize.h  bitmap.h
opencv_warp/: CMakeLists.txt  ProjectiveMotionRL_main.cpp
opencv_warp/include/: BicubicInterpolation.h  ImResize.h  ProjectiveMotionRL.h  warping.h
opencv_warp/src/: ProjectiveMotionRL.cpp  warping.cpp
refactored_code/: BasicDeblur.cpp  BasicMultiscaleDeblur.cpp  BicubicInterpolation.cpp  BilateralLaplRegDeblur.cpp  BilateralRegDeblur.cpp  BlurKernelDeblur.cpp  CMakeLists.txt  Convergence.cpp  ImResize.cpp  LaplRegDeblur.cpp  ProjectiveMotionRL.cpp  ProjectiveMotionRL.h  ProjectiveMotionRL_main.cpp  TVRegDeblur.cpp  bitmap.cpp  homography.h  svdcmp.h
refactored_code/include/: BicubicInterpolation.h  BilateralLaplacianRegularizer.hpp  BlurKernelGenerator.hpp  BlurUtils.hpp  DeblurParameters.hpp  EmptyErrorCalculator.h  EmptyErrorCalculator.hpp  EmptyRegularizer.hpp  GaussianNoiseGenerator.h  GaussianNoiseGenerator.hpp  IBlurImageGenerator.h  IErrorCalculator.h  INoiseGenerator.hpp  IRegularizer.hpp  ImResize.h  KernelRegularizer.hpp  LaplacianRegularizer.hpp  MotionBlurImageGenerator.h  MotionBlurImageGenerator.hpp  MotionBlurMaker.hpp  ProjectiveMotionRL.h  ProjectiveMotionRL.hpp  ProjectiveMotionRLMultiScaleGray.h  ProjectiveMotionRLMultiScaleGray.hpp  RLDeblurrer.hpp  RLDeblurrerBilateralLaplReg.hpp  RLDeblurrerBilateralReg.hpp  RLDeblurrerLaplReg.hpp  RLDeblurrerTVReg.hpp  RMSErrorCalculator.h  RMSErrorCalculator.hpp  TVRegularizer.hpp  bitmap.h  homography.h  svdcmp.h  warping.h
refactored_code/src/: BicubicInterpolation.cpp  BilateralLaplacianRegularizer.cpp  BilateralRegularizer.cpp  BlurKernelGenerator.cpp  BlurUtils.cpp  EmptyErrorCalculator.cpp  EmptyRegularizer.cpp  GaussianNoiseGenerator.cpp  Homography.cpp  ImResize.cpp  KernelRegularizer.cpp  LaplacianRegularizer.cpp  MotionBlurImageGenerator.cpp  MotionBlurMaker.cpp  ProjectiveMotionRL.cpp  ProjectiveMotionRLMultiScaleGray.cpp  RLDeblurrer.cpp  RLDeblurrerBilateralLaplReg.cpp  RLDeblurrerBilateralReg.cpp  RLDeblurrerLaplReg.cpp  RLDeblurrerTVReg.cpp  RMSErrorCalculator.cpp  TVRegularizer.cpp  bitmap.cpp  homography.cpp  svdcmp.cpp  warping.cpp
